...
    }, {})
  ) : [];

  const router = useRouter();

  return (
    <View testID="screen-logs-home" style={styles.screen}>
      <View style={styles.header}>
        <Text style={styles.title}>Logs</Text>
      </View>
      <ScrollView
        style={styles.scrollView}
        contentContainerStyle={[styles.content, !hasLogs && styles.emptyContent]}>
...
